# qt-hello-world

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
